--- a/Chatbot/.env
+++ b/Chatbot/.env
@@ -1,3 +1,3 @@
 # .env file for new_chatbot
-GOOGLE_API_KEY="AIzaSyC6njI97VRA3pPi4w1nXo0jERdF0zSbVc8"
-GEMINI_API_KEY="AIzaSyAxF5wAq0IT_Yqo5BYnSk-ai7aujzPngKE"
+# GEMINI_API_KEY="AIzaSyAxF5wAq0IT_Yqo5BYnSk-ai7aujzPngKE"
+GEMINI_API_KEY="AIzaSyBqeH7PLNochFUvIPfcYyZ23owHpiJ_KyQ"
